--- a/Term Deposit Subscription Prediction.ipynb
+++ b/Term Deposit Subscription Prediction.ipynb
@@ -10,8 +10,7 @@
     "\n",
     "---\n",
     "\n",
-    "\n",
-    "This Colab notebook presents a comprehensive analysis and predictive modeling project for predicting whether a client will subscribe to a term deposit based on various attributes. The dataset used in this project contains information about clients, including demographics, financial status, and previous marketing campaign outcomes. The goal is to build machine learning models that can accurately predict whether a client will subscribe to a term deposit, which is a binary classification task.\n",
+    "This notebook presents a comprehensive analysis and predictive modeling project for predicting whether a client will subscribe to a term deposit based on various attributes. The dataset used in this project contains information about clients, including demographics, financial status, and previous marketing campaign outcomes. The goal is to build machine learning models that can accurately predict whether a client will subscribe to a term deposit, which is a binary classification task.\n",
     "\n",
     "### **Bank Marketing Data summary**\n",
     "\n",
@@ -32,7 +31,8 @@
     "6. housing: has housing loan? (categorical: \"no\",\"yes\",\"unknown\")\n",
     "7. loan: has personal loan? (categorical: \"no\",\"yes\",\"unknown\")\n",
     "\n",
-    " **#related with the last contact of the current campaign:**\n",
+    " **# related with the last contact of the current campaign:**\n",
+    " \n",
     "8. contact: contact communication type (categorical: \"cellular\",\"telephone\")\n",
     "9. month: last contact month of year (categorical: \"jan\", \"feb\", \"mar\", ..., \"nov\", \"dec\")\n",
     "10. day_of_week: last contact day of the week (categorical: \"mon\",\"tue\",\"wed\",\"thu\",\"fri\")\n",
